--- a/OsmoBTS/abis/rsl.adoc
+++ b/OsmoBTS/abis/rsl.adoc
@@ -273,7 +273,7 @@ the E1 line is a dedicated line between BTS and BSC, no further
 addressing information is required.
 
 In A-bis/IP as described by the present document, new RSL procedures
-have been introduced in order to deal with the different properties of
+have been introduced to deal with the different properties of
 the underlying IP based transport medium.
 
 [[rsl_crcx]]
@@ -335,7 +335,7 @@ See <<rsl_dlcx_ind_msg>>
 [[rsl_crcx_msg]]
 ==== Create Connection (CRCX)
 
-This message is sent by the BSC to the BTS in order to request the
+This message is sent by the BSC to the BTS to request the
 creation of a user-plane RTP connection for the specified *Channel
 number*.
 
@@ -355,7 +355,7 @@ number*.
 [[rsl_crcx_msg_ack]]
 ==== Create Connection (CRCX) ACK
 
-This message is sent by the BTS to the BSC in order to acknowledge the
+This message is sent by the BTS to the BSC to acknowledge the
 successful outcome of creating a user-plane RTP connection.  It is sent
 in response to the *Create Connection (CRCX)*.
 
@@ -375,7 +375,7 @@ in response to the *Create Connection (CRCX)*.
 [[rsl_crcx_msg_nack]]
 ==== Create Connection (CRCX) NACK
 
-This message is sent by the BTS to the BSC in order to signal the
+This message is sent by the BTS to the BSC to signal the
 unsuccessful outcome of creating a user-plane RTP connection.  It is
 sent in response to the *Create Connection (CRCX)*.
 
@@ -395,7 +395,7 @@ sent in response to the *Create Connection (CRCX)*.
 [[rsl_mdcx_msg]]
 ==== Modify Connection (MDCX)
 
-This message is sent by the BSC to the BTS in order to modify the
+This message is sent by the BSC to the BTS to modify the
 properties of a user-plane RTP connection.
 
 [options="header"]
@@ -415,7 +415,7 @@ properties of a user-plane RTP connection.
 [[rsl_mdcx_msg_ack]]
 ==== Modify Connection (MDCX) ACK
 
-This message is sent by the BTS to the BSC in order to acknowledge the
+This message is sent by the BTS to the BSC to acknowledge the
 successful modification of a user-plane RTP connection.  It is sent in
 response to a *Modify Connection (MDCX)*
 
@@ -435,7 +435,7 @@ response to a *Modify Connection (MDCX)*
 [[rsl_mdcx_msg_nack]]
 ==== Modify Connection (MDCX) NACK
 
-This message is sent by the BTS to the BSC in order to signal the
+This message is sent by the BTS to the BSC to signal the
 unsuccessful outcome of modifying the user-plane RTP connection for the
 specified Channel number.  It is sent in response to the *Modify
 Connection (MDCX)*.
@@ -453,7 +453,7 @@ Connection (MDCX)*.
 [[rsl_dlcx_ind_msg]]
 ==== Delete Connection (DLCX) Indication
 
-This message is sent by the BTS in order to indicate the automatic
+This message is sent by the BTS to indicate the automatic
 deletion of a BTS-local UDP connection for user-plane RTP traffic at the
 time of RF Channel release.
 
@@ -472,7 +472,7 @@ time of RF Channel release.
 [[rsl_dlcx_msg]]
 ==== Delete Connection (DLCX)
 
-This message is sent by the BSC to the BTS in order to request the
+This message is sent by the BSC to the BTS to request the
 disconnection of a user-plane RTP connection for the specified Channel
 number.
 
@@ -489,7 +489,7 @@ number.
 [[rsl_dlcx_msg_ack]]
 ==== Delete Connection (DLCX) ACK
 
-This message is sent by the BTS in order to signal the successful
+This message is sent by the BTS to signal the successful
 outcome of deleting the user-plane RTP connection for the specified
 Channel number.  It is sent in response to the *Delete Connection
 (DLCX)*.
@@ -508,7 +508,7 @@ Channel number.  It is sent in response to the *Delete Connection
 [[rsl_dlcx_msg_nack]]
 ==== Delete Connection (DLCX) NACK
 
-This message is sent by the BTS in order to signal the unsuccessful
+This message is sent by the BTS to signal the unsuccessful
 outcome of deleting the user-plane RTP connection for the specified
 Channel number.  It is sent in response to the *Delete Connection
 (DLCX)*.
@@ -636,7 +636,7 @@ fixed-length payload encoded as follows:
 | 24 | 4 | Average transmission delay
 |===
 
-All the above values are each encoded in network byte order.
+All the above values are encoded in network byte order.
 
 A detailed definition of the individual values is given in RFC 1889.
 
@@ -674,8 +674,8 @@ include::rsl-startup-pri.msc[]
 include::rsl-startup-sec.msc[]
 ----
 
-As can be seen by the differences between <<rsl-msc-pri>> and
-<<rsl-msc-sec>>, the initialization of the primary and secondary TRX
-slightly differ.   As the secondary TRX has no BCCH, it does not (need
-to) receive any 'RSL BCCH INFORMATION' messages from the BSC.
+The initialization of the primary and secondary TRX slightly differ, as
+illustrated by the differences of <<rsl-msc-pri>> and <<rsl-msc-sec>>.
+Since the secondary TRX has no BCCH, it does not (need to) receive any 'RSL
+BCCH INFORMATION' messages from the BSC.
 
