OsmoBTS/abis/rsl.adoc: fix missing section header
In effect, this fixes the dangling references from the table of RSL messages
with additions/limitations to the Chan Act message description.

Change-Id: Ic6f83f016ce9ec90af7eb0af1b1f71a10263915d

--- a/OsmoBTS/abis/rsl.adoc
+++ b/OsmoBTS/abis/rsl.adoc
@@ -118,6 +118,7 @@ Specific additions and limitations apply, see the linked sections.
 === Message Limitation Details
 
 [[CHANNEL_ACTIVATION]]
+==== Channel Activation
 
 When used on a timeslot using the non-standard channel combination
 'NM_CHANC_OSMO_TCHFull_TCHHalf_PDCH' as configured by OML, the regular
