osmobts-usermanual.adoc: fix link to abis.adoc chapter
The chapter is in ../common/chapters, not in ./chapters

Change-Id: I698d83e96cb77900b99a0bd383587b1b68182efb

--- a/OsmoBTS/osmobts-usermanual.adoc
+++ b/OsmoBTS/osmobts-usermanual.adoc
@@ -6,7 +6,7 @@ include::../common/chapters/preface.adoc[]
 
 include::chapters/overview.adoc[]
 
-include::chapters/abis.adoc[]
+include::../common/chapters/abis.adoc[]
 
 include::chapters/interfaces.adoc[]
 
